# RestrictionEnzymes

./: .gitignore  Cargo.toml  Readme.md  pixi.toml
.github/workflows/: rust-docs.yml
data/restriction_enzymes/: enzyme.txt
data/restriction_enzymes/enzymedata/: Aani.json  Aari.json  Aasi.json  Aatii.json  Aba13301i.json  Aba6411ii.json  Abab8342iv.json  Abaciii.json  Abapba3ii.json  Abasi.json  Abaumb2i.json  Abr4036ii.json  Absi.json  Acc16i.json  Acc36i.json  Acc65i.json  Acc65v.json  Accb1i.json  Accb7i.json  Accbsi.json  Acci.json  Accii.json  Acciii.json  Accix.json  Accx.json  Aceiii.json  Acha6iii.json  Acii.json  Acli.json  Aclwi.json  Aco12261ii.json  Acoi.json  Acoy31ii.json  Acsi.json  Acui.json  Acvi.json  Acyi.json  Adei.json  Adh6u21i.json  Afai.json  (+1025 more)
scripts/: create_resbase.py
src/: enzyme_trait.rs  enzymes.rs  lib.rs  rebase.rs  rebase_crab.rs
