[package]
name = "common-biodata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "1.4.1"
include_dir = "0.7.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

