[package]
name = "restriction-enzymes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "2.1.0"
include_dir = "0.7.4"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
